--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/connections"
     android:layout_width="match_parent"
@@ -28,7 +29,8 @@
         android:format12Hour="hh:mm:ss a"
         android:textColor="#FFFFFF"
         android:textSize="45sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-light"/>
 
     <AnalogClock
         android:id="@+id/analogClock"
@@ -48,6 +50,7 @@
         android:textSize="35sp"
         android:textStyle="bold"
         android:text="New York"
+        android:fontFamily="sans-serif-thin"
         tools:text="@tools:sample/cities" />
 
     <TextView
@@ -59,6 +62,7 @@
         android:textColor="#FFFFFF"
         android:textSize="35sp"
         android:textStyle="bold"
+        android:fontFamily="sans-serif-thin"
         />
 
     <Button
@@ -69,6 +73,16 @@
         android:layout_gravity = "center_horizontal"
         android:layout_marginTop="410dp"
         android:visibility="visible" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/right"
+        android:layout_marginTop="210dp"
+        android:layout_marginLeft="350dp"
+        android:background="@android:color/transparent"
+        />
 
 
 </FrameLayout>
