--- a/app/src/main/res/layout/fragment_fourth.xml
+++ b/app/src/main/res/layout/fragment_fourth.xml
@@ -27,7 +27,8 @@
         android:textColor="#FFFFFF"
         android:timeZone="Europe/London"
         android:textSize="45sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-light"/>
 
     <AnalogClock
         android:id="@+id/analogClock"
@@ -47,7 +48,8 @@
         android:textSize="35sp"
         android:textStyle="bold"
         android:text="London"
-        tools:text="@tools:sample/cities" />
+        tools:text="@tools:sample/cities"
+        android:fontFamily="sans-serif-thin"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -58,6 +60,7 @@
         android:textColor="#FFFFFF"
         android:textSize="35sp"
         android:textStyle="bold"
+        android:fontFamily="sans-serif-thin"
         />
 
     <Button
@@ -68,5 +71,26 @@
         android:layout_gravity = "center_horizontal"
         android:layout_marginTop="410dp"
         android:visibility="visible" />
+
+    <ImageButton
+        android:id="@+id/imageButtonRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/right"
+        android:layout_marginTop="210dp"
+        android:layout_marginLeft="350dp"
+        android:background="@drawable/rounded_corners"
+        android:alpha="0.6"
+        />
+
+    <ImageButton
+        android:id="@+id/imageButtonLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/left"
+        android:layout_marginTop="210dp"
+        android:background="@drawable/rounded_corners"
+        android:alpha="0.6"
+        />
 
 </FrameLayout>
