--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -28,7 +28,8 @@
         android:textColor="#FFFFFF"
         android:timeZone="America/Los_Angeles"
         android:textSize="45sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-light"/>
 
     <AnalogClock
         android:id="@+id/analogClock"
@@ -48,7 +49,8 @@
         android:textSize="35sp"
         android:textStyle="bold"
         android:text="Los Angeles"
-        tools:text="@tools:sample/cities" />
+        tools:text="@tools:sample/cities"
+        android:fontFamily="sans-serif-thin"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -59,6 +61,7 @@
         android:textColor="#FFFFFF"
         android:textSize="35sp"
         android:textStyle="bold"
+        android:fontFamily="sans-serif-thin"
         />
 
     <Button
@@ -69,5 +72,24 @@
         android:layout_gravity = "center_horizontal"
         android:layout_marginTop="410dp"
         android:visibility="visible" />
+
+    <ImageButton
+        android:id="@+id/imageButtonRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/right"
+        android:layout_marginTop="210dp"
+        android:layout_marginLeft="350dp"
+        android:background="@android:color/transparent"
+        />
+
+    <ImageButton
+        android:id="@+id/imageButtonLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/left"
+        android:layout_marginTop="210dp"
+        android:background="@android:color/transparent"
+        />
 
 </FrameLayout>
