--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -78,7 +78,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Switch Clock"
+        android:text="Switch Clock Style"
         android:layout_gravity = "center_horizontal"
         android:layout_marginTop="410dp"
         android:visibility="visible" />
