--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -46,6 +46,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="70dp"
         android:textStyle="bold"
+        android:textSize="18sp"
         android:text="Swipe See Other Cities!"
         android:textColor="#FFFFFF"/>
 
